gdbtrace: Change instantiation of Integer argument
Change-Id: Ib0bf057a4fd858271da1ea332e7ce94c3df72493
Signed-off-by: Alexis Cabana-Loriaux <alex021994@gmail.com>
Reviewed-on: https://git.eclipse.org/r/47318
Reviewed-by: Hudson CI
Reviewed-by: Alexandre Montplaisir <alexmonthy@voxpopuli.im>
Reviewed-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>